src/components/mobile/MobileNavigation.scss
@import "node_modules/spectre.css/src/variables";

#navigation {
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  z-index: 2;
  box-shadow: 0 -0.1rem 0.2rem #eeeeee;
}

#navigation button {
  background-color: rgba(255, 255, 255, 0.95);
  border: none;
  color: #5F6368;
  font-size: 14px;
  height: 3rem;

  &.active {
    box-shadow: none;
    color: #1A73E8;
  }

  span {
    display: block;
  }
}

//@import "~spectre.css/src/mixins";
//.btn-blue {
//  @include button-variant(#1A73E8);
//}

